Fixed responsivnes of label sections on mobile devices

--- a/frontend/src/components/sections/notes-with-labels-section/styles.module.scss
+++ b/frontend/src/components/sections/notes-with-labels-section/styles.module.scss
@@ -8,13 +8,7 @@
   font-size: 1rem;
 }
 
-.notes {
-  display: grid;
-  gap: 1rem;
-  grid-template-columns: repeat(4, minmax(100px, 1fr));
-  margin: 1rem;
-  padding-top: 4rem;
-}
+@include notesSectionStrcuture;
 
 .error {
   @include errorStyle;
